# gtm-factory

./: .gitignore  .mcp.json  CLAUDE.md  README.md  TO DO  gtm-rhetoric-complete.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
.claude/commands/: commit.md  learn.md  onboard.md
Learning/: GTM-FRAMEWORK-CONTEXT.md  VISUALIZATION-SPEC.md  gtm-framework-v3.html
Learning/deploy/: index.html
Learning/phase 2 notes/: NOTES.md  gold_v1_initial output.md  gold_v2_research and output (w update) combined.md  research_output.md
config/: gpt_researcher.json  gpt_researcher_minimal.json
core/: __init__.py
core/generators/: __init__.py  critical_analyst_generator.py  latest_generator.py  session_metadata_generator.py
core/hq/: __init__.py  context_extractor.py  memory_manager.py  mission_briefing.py  orchestrator.py
core/researcher/: __init__.py  general_researcher.py
core/ui/: __init__.py  context_tracker.py  state_manager.py
docs/: PROJECT-STRUCTURE.md
docs/guidelines/: building_agents.md  context-management-2025-11-06.md  gpt-researcher-api.md  llm-testing-strategy-research-2025-11-19.md  mission-briefing-design-2025-11-19.md  orchestrator-workers-2025-11-06.md  project-health-audit-2025-11-19.md  researcher-integration-2025-11-06.md  streaming-api-2025-11-06.md  (+4 more)
prompts/: critical-analyst.md  general-researcher.md  hq-general.md  hq-gtm-execution.md  hq-icp-validation.md  hq-orchestrator.md  latest-generator.md  session-metadata-generator.md
tests/: README-TESTING.md  test_examples.py  test_generators.py  test_gpt_researcher_api.py  test_gpt_researcher_context.py  test_hq.py  test_hq_researcher.py  test_integration.py  test_researcher.py  test_ui.py
ui/: README.md  __init__.py  app.py
(+33 files in other folders)
